# survey-app

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: deploy.yml  pr-checks.yml
src/: app.py  home.py  step1.py  step2.py  step3.py
src/contents/: 01_home.py  02_cleaning.py  03_manipulation.py  04_visualization.py
src/core/: cleaning.py  data_loading.py  data_processing.py  dataframe_operation.py  manipulation.py  visualization.py
src/core/data/: sample.csv
src/data/: sample.csv
src/interface/: state.py
src/interface/components/: cleaning_options.py  data_settings.py  data_summary.py  display.py  input.py
src/interface/page_cleaning/: cleaning.py
src/interface/page_manipulation/: preview.py  scale_scores.py  settings.py
src/interface/pages/: cleaning.py  common.py  manipulation.py  visualization.py
src/interface/sections/: manipulation_preview.py  manipulation_settings.py  step1.py  step2.py  step3.py
src/pages/: 01_cleaning.py
src/utils/: logger_config.py
tests/: test_app.py  test_core_data_processing.py  test_data_settings.py  test_step3.py
tests/core/: test_cleaning.py  test_data_processing.py  test_dataframe_operation.py  test_manipulation.py  test_visualization.py
tests/interface/: test_state.py
