[tool.poetry]
name = "survey-app"
version = "0.1.0"
description = ""
authors = ["dmaruyama-51 <0501awasuram@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
streamlit = "^1.41.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
